--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,13 @@
     flex-direction: row;
     align-items: center;
 }
+
+.list-group-item:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#title {
+    background-color: rgb(203, 203, 203);
+    padding: 2%;
+    border-bottom: 2px solid #8f8f8f;
+}
